ensure map controls are visible on small windows

--- a/client/imports/stylesheets/main.import.styl
+++ b/client/imports/stylesheets/main.import.styl
@@ -7,6 +7,7 @@
   color white
   padding 10px 16px
   width "calc(100% - %s)" % $side-panel-width
+  position relative
   .title
     display inline-block
 
@@ -406,3 +407,9 @@ footer
     border-radius 2px
     margin-bottom 1em
     min-height 2.5em
+
+.create-event
+  float right
+
+header
+  border-bottom 1px solid #efefef
