--- a/client/imports/stylesheets/map.import.styl
+++ b/client/imports/stylesheets/map.import.styl
@@ -25,6 +25,11 @@
     pointer-events none
 
 .map-controls
+  display inline-block
+  position absolute
+  top 0.6em
+  right 0.6em
+
 .bioevent-controls
   display inline-block
   float right
